<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BookCreateActivity">


    <EditText
        android:id="@+id/book_name_edit_text_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/book_name_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/book_price_edit_text_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/book_price_hint"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/book_quantity_edit_text_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="number"
        android:hint="@string/book_quantity_hint"
        />


    <EditText
        android:id="@+id/book_supplier_name_edit_text_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="text"
        android:hint="@string/supplier_name_hint"
        />

    <EditText
        android:id="@+id/book_supplier_phone_text_edit_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="phone"
        android:hint="@string/supplier_phone_hint"/>

    <Button
        android:id="@+id/book_create_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/book_create_button_text" />

</LinearLayout>